--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/server.js",
+    "build": "prisma generate && prisma db push",
     "dev": "nodemon src/server.js",
     "db:push": "prisma db push",
     "db:generate": "prisma generate",
