--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,16 +4,21 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@prisma/client": "^6.16.2",
     "autoprefixer": "^10.4.16",
     "axios": "^1.12.2",
+    "bcryptjs": "^3.0.2",
     "date-fns": "^2.30.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.0.3",
     "postcss": "^8.4.31",
+    "prisma": "^6.16.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
