Fix mobile layout for Price Estimates section in AI booking assistant
- Updated grid to use responsive breakpoints (1 col mobile, 2 col sm, 3 col md+)
- Reduced price font size on mobile for better fit
- Hotels, Apartments, and Bed & Breakfast options now display properly on mobile

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -24,8 +24,15 @@ LOG_LEVEL=info
 OPENAI_API_KEY=your-openai-api-key-here
 GOOGLE_PLACES_API_KEY=your-google-places-api-key-here
 
+# PayPal Payment Integration
+# Get these from https://developer.paypal.com/
+# For testing, use sandbox credentials
+PAYPAL_CLIENT_ID=your-paypal-client-id-here
+PAYPAL_CLIENT_SECRET=your-paypal-client-secret-here
+PAYPAL_WEBHOOK_ID=your-paypal-webhook-id-here
+PAYPAL_PRODUCT_ID=your-paypal-product-id-here
+
 # Future features (placeholder for now)
-# STRIPE_SECRET_KEY=your-stripe-secret-key-here
 # AWS_ACCESS_KEY_ID=your-aws-access-key
 # AWS_SECRET_ACCESS_KEY=your-aws-secret-key
 # EMAIL_SERVICE_API_KEY=your-email-service-key
