--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.4.2",
+    "@paypal/paypal-js": "^8.4.2",
+    "@paypal/paypal-server-sdk": "^1.1.0",
     "@prisma/client": "^5.4.2",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
@@ -21,7 +23,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "node-cache": "^5.1.2",
-    "openai": "^4.11.1"
+    "openai": "^4.11.1",
+    "stripe": "^18.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
