--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@paypal/paypal-js": "^8.4.2",
+    "@stripe/stripe-js": "^7.9.0",
     "autoprefixer": "^10.4.16",
     "axios": "^1.12.2",
     "date-fns": "^2.30.0",
