--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,11 +1,11 @@
 {
   "version": 2,
-  "name": "travel-planner-api",
-  "functions": {
-    "api/index.js": {
-      "runtime": "@vercel/node"
+  "builds": [
+    {
+      "src": "api/index.js",
+      "use": "@vercel/node"
     }
-  },
+  ],
   "routes": [
     {
       "src": "/api/(.*)",
@@ -15,13 +15,5 @@
       "src": "/(.*)",
       "dest": "/api/index.js"
     }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  },
-  "build": {
-    "env": {
-      "NODE_ENV": "production"
-    }
-  }
+  ]
 }
