--- a/render.yaml
+++ b/render.yaml
@@ -3,11 +3,11 @@ services:
   - type: web
     name: travel-planner-backend
     runtime: node
-    region: ohio
+    region: oregon
     plan: free
     rootDir: backend
-    buildCommand: npm install && npx prisma generate
-    startCommand: npx prisma db push --accept-data-loss && npm start
+    buildCommand: npm install && npm run build
+    startCommand: npm start
     envVars:
       - key: NODE_ENV
         value: production
